fix: accessories overlapping with menu (#24)

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@
 
 .related-accessories--summary {
   position: relative;
-  z-index: 100;
+  z-index: 99;
 }
 
 .related-accessories {
